fixed title and list items on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -355,7 +355,7 @@ table{
   and (min-device-width: 319px) 
   and (max-device-width: 480px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-
+    
     h1 {
         font-size: 2.5rem;
         margin-bottom: 2.5rem;
@@ -364,9 +364,12 @@ table{
         font-size: 2rem;
         margin-bottom: 2rem;
     }
+    .titleText{
+        font-size: 2rem;
+    }
     
     .subHome {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .nav-item {
